[project]
name = "tantrik-dl"
version = "0.1.0"
description = "A simple utility to download `.ipynb` files from Tantrik instance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.9",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
